--- a/es/smallfile-en.po
+++ b/es/smallfile-en.po
@@ -10,6 +10,10 @@ msgstr "A screenshot showing amp-sidebar."
 msgid "A website screenshot."
 msgstr "A website screenshot."
 
+#: /views/partials/case-band.j2:6 /views/partials/case-band.j2:47
+msgid "A screenshot of a website using AMPppo."
+msgstr "A screenshot of a website using AMPppo."
+
 #: /views/partials/footer.j2:74
 msgid "AMP Brand Materials"
 msgstr "AMP Brand Materials"
